Fix Organizers spacing

--- a/_sass/staff.scss
+++ b/_sass/staff.scss
@@ -15,7 +15,7 @@
 		}
 
 		@media #{$desktop} {
-			@include flex(1, 1, 25%);
+			@include flex(1, 1, 20%);
 		}
 
 	}
